# gitlab-scripts

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  hosts.yml
playbooks/: backup-gitlab.yml  upgrade-gitlab.yml
playbooks/roles/add-known-hosts/tasks/: main.yml
playbooks/roles/backup-gitlab/defaults/: main.yml
playbooks/roles/backup-gitlab/meta/: main.yml
playbooks/roles/backup-gitlab/tasks/: main.yml
playbooks/roles/upgrade-gitlab/defaults/: main.yml
playbooks/roles/upgrade-gitlab/meta/: main.yml
playbooks/roles/upgrade-gitlab/tasks/: main.yml
pull-upgrade-images/: README.md  pull_upgrade_images.py  pyproject.toml
