[tool.poetry]
name = "pull-upgrade-images"
version = "0.1.0"
description = "Script to pull gitlab images according to the upgrade path"
authors = ["Goh Chun Teck <gohchunteck@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.24.0"
pyperclip = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
